// An example of the official reference with additional comments.
// See https://developers.google.com/protocol-buffers/docs/reference/proto3-spec#proto_file
syntax = "proto3";
// Imports other.proto
import public "other.proto";
// java_package option
option java_package = "com.example.foo";
// EnumAllowingAlias is an alias
enum EnumAllowingAlias {
    // allow_alias option is true
    option allow_alias = true;
    UNKNOWN = 0;
    STARTED = 1;
    RUNNING = 2 [(custom_option) = "hello world"];
}
// outer message
message outer {
    option (my_option).a = true;
    // inner message
    message inner {
      int64 ival = 1;
    }
    repeated inner inner_message = 2;
    EnumAllowingAlias enum_field =3;
    map<int32, string> my_map = 4;
}
